update properties db source, and some changes in docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,9 @@ services:
     image: mysql:8.0.19
     environment:
       - MYSQL_ROOT_PASSWORD=admin
-      - MYSQL_USER=root
-      - MYSQL_PASSWORD=admin
+      - MYSQL_USER=argento
+      - MYSQL_PASSWORD=pass
       - MYSQL_DATABASE=projects
-      - MYSQL_ONETIME_PASSWORD=true
     ports:
       - 3306:3306
     restart: always
@@ -20,7 +19,7 @@ services:
       - database
     environment:
       - SPRING_DATASOURCE_URL=jdbc:mysql://database:3306/projects?useSSL=false&allowPublicKeyRetrieval=true
-      - SPRING_DATASOURCE_USERNAME=root
-      - SPRING_DATASOURCE_PASSWORD=admin
+      - SPRING_DATASOURCE_USERNAME=argento
+      - SPRING_DATASOURCE_PASSWORD=pass
     restart: always
     
